--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -35,6 +35,6 @@ jobs:
       - name: Release
         run: |
           zip -r executable/semantic-release.zip executable
-          cp -r plugin/build/libs/architect-semantic-release-0.1-all.jar executable/semantic-release-plugin.jar
+          cp -r plugin/build/libs/architect-semantic-release-0.1.jar executable/semantic-release-plugin.jar
           cd executable && ./release
           
