--- a/executable/package.json
+++ b/executable/package.json
@@ -1,8 +1,15 @@
 {
-  "devDependencies": {
-    "semantic-release-preconfigured-conventional-commits": "1.1.115"
+  "name": "architect-semantic-release",
+  "version": "1.0.0",
+  "scripts": {
+    "release": "semantic-release"
   },
-  "engines": {
-    "node": "22.11"
+  "devDependencies": {
+    "semantic-release": "^24.2.0",
+    "@semantic-release/commit-analyzer": "^13.0.0",
+    "@semantic-release/release-notes-generator": "^14.0.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.1"
   }
 }
