--- a/executable/package.json
+++ b/executable/package.json
@@ -5,6 +5,7 @@
     "release": "semantic-release"
   },
   "devDependencies": {
+    "conventional-changelog-conventionalcommits": "8.0.0",
     "semantic-release": "^24.2.0",
     "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/release-notes-generator": "^14.0.1",
